--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "url": "git://github.com/scottgonzalez/hookup.git"
   },
   "dependencies": {
-    "optimist": "~0.6.0"
+    "optimist": "~0.6.0",
+    "github-request": "~1.1.0"
   }
 }
